# poetry-test

./: pyproject.toml
yatube/about/tests/: test_urls.py  test_views.py
yatube/core/: views.py
yatube/core/tests/: test_views.py
yatube/posts/: admin.py  forms.py  models.py  urls.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_auto_20220224_2025.py  0003_auto_20220225_1945.py  0004_auto_20220226_1114.py  0005_auto_20220226_1124.py  0006_auto_20220227_1115.py  0007_auto_20220404_1913.py  0008_post_image.py  0009_comment.py  0010_auto_20220409_1042.py  0011_follow.py  0012_auto_20220412_1910.py  0013_auto_20220413_2006.py  0014_auto_20220420_1838.py  0015_auto_20220420_1844.py  0016_auto_20220420_2050.py
yatube/posts/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
yatube/templates/: base.html
yatube/templates/about/: author.html  tech.html
yatube/templates/core/: 500.html
yatube/templates/includes/: header.html
yatube/templates/posts/: create_post.html  follow.html  group_list.html  index.html  post_detail.html  profile.html
yatube/templates/posts/includes/: comment_include.html  paginator.html  post_include.html  switcher.html
yatube/templates/users/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
yatube/users/: urls.py
yatube/yatube/: settings.py  urls.py
