[tool.poetry]
name = "poetry test"
version = "0.1.0"
description = ""
authors = ["Andrew Ilyashenko <exmoreandrew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.26.0"
Django = "2.2.16"
mixer = "7.1.2"
Pillow = "8.3.1"
pytest = "6.2.4"
pytest-django = "4.4.0"
pytest-pythonpath = "0.7.3"
six = "1.16.0"
sorl-thumbnail = "12.7.0"
Faker = "12.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
